appId: com.qazandoqafood
---
- runFlow: login.yaml
- tapOn: "Selecione seu endereço..."
- tapOn: "PERMITIR"
- tapOn: "Av. Governador A. Konder, 20"
- tapOn: "PERMITIR"
- tapOn: "Pastelaria da Maria"
- tapOn:
    id: "add-item-buttom"
    index: 0
- tapOn:
    id: "open-cart-button"
- tapOn:
    id: "confirm-order-button"
- scroll
- tapOn: "Dinheiro"
- tapOn:
    id: "do-order-button"
- assertVisible: "Pedido realizado"
